# E_commerce

./: .gitignore  README.MD  app.py  connection.py  pyproject.toml  views.py
app/templates/: Products.jinja  add_product.jinja  index.html.jinja  product.jinja
