[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = "Group project"
authors = ["Marcin Sikora, Daniel Skwarczek, Gabriel Rak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
python-firebase = "^1.2"
firebase-admin = "^6.2.0"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
